css touch-action added to stop zoom on IOS

--- a/lesson4.css
+++ b/lesson4.css
@@ -3,3 +3,7 @@
     height:500px;
     background-color:blue;
 }
+
+body{
+    touch-action: pan-y;
+}
